[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/diae_container.gd" type="Script" id=1]
[ext_resource path="res://scenes/rich_text_label.tscn" type="PackedScene" id=2]

[node name="diae_container" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 37.0
alignment = 2

[node name="search_bar" type="LineEdit" parent="controls"]
visible = false
margin_left = 698.0
margin_right = 862.0
margin_bottom = 45.0
hint_tooltip = "Search for artefacts in your library"
size_flags_horizontal = 3
placeholder_text = "Search"
caret_blink = true

[node name="search" type="Button" parent="controls"]
visible = false
margin_left = 838.0
margin_right = 862.0
margin_bottom = 37.0
hint_tooltip = "Start search"
text = "‚ñ∂"

[node name="settings" type="Button" parent="controls"]
visible = false
margin_left = 838.0
margin_right = 862.0
margin_bottom = 37.0
hint_tooltip = "Open settings"
text = "‚öô"

[node name="open" type="Button" parent="controls"]
margin_left = 870.0
margin_right = 894.0
margin_bottom = 37.0
hint_tooltip = "Open file in new editor"
text = "üìÅ"

[node name="add_container" type="Button" parent="controls"]
margin_left = 902.0
margin_right = 926.0
margin_bottom = 37.0
hint_tooltip = "Add a new container"
text = "üìë"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="OptionButton" parent="controls"]
margin_left = 934.0
margin_right = 992.0
margin_bottom = 37.0
hint_tooltip = "Change layout"
text = "üìë"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Button" parent="controls"]
margin_left = 1000.0
margin_right = 1024.0
margin_bottom = 37.0
hint_tooltip = "Close container and all children"
text = "‚úñ"

[node name="layout_container" type="TabContainer" parent="."]
margin_top = 45.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="tabbed" type="TabContainer" parent="layout_container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -8.0

[node name="vertical" type="VBoxContainer" parent="layout_container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1
alignment = 1

[node name="horizontal" type="HBoxContainer" parent="layout_container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1
alignment = 1

[node name="file_dialog" type="FileDialog" parent="."]
margin_right = 645.0
margin_bottom = 248.0
mode_overrides_title = false
access = 2
current_dir = "/home/fahrstuhl/projects/diae/godiae"
current_path = "/home/fahrstuhl/projects/diae/godiae/"

[node name="search_panel" type="PopupPanel" parent="."]
margin_right = 16.0
margin_bottom = 16.0

[node name="rich_text_label" parent="search_panel" instance=ExtResource( 2 )]
margin_top = 8.0
[connection signal="text_entered" from="controls/search_bar" to="." method="_on_search_bar_text_entered"]
[connection signal="pressed" from="controls/search" to="." method="_on_search_pressed"]
[connection signal="pressed" from="controls/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="controls/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="controls/add_container" to="." method="_on_add_container_pressed"]
[connection signal="item_selected" from="controls/layout" to="." method="_on_layout_item_selected"]
[connection signal="pressed" from="controls/close" to="." method="_on_close_pressed"]
[connection signal="file_selected" from="file_dialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="meta_clicked" from="search_panel/rich_text_label" to="." method="_on_rich_text_label_meta_clicked"]
